--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -214,5 +214,11 @@
             width: 20px;
             height: 20px;
         }
+
+        @media(max-width: 600px) {
+            .text {
+                min-width: 160px;
+            }
+        }
     }
 }
