--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -342,6 +342,7 @@
             position: relative;
 
             .user-name {
+                margin-left: 12px;
                 padding-bottom: 16px;
             }
         }
