--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.css
@@ -305,6 +305,7 @@
   position: relative;
 }
 .quizPage .feed .userblock .user-name {
+  margin-left: 12px;
   padding-bottom: 16px;
 }
 .quizPage .feed .comment-date {
