--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -342,8 +342,11 @@
             position: relative;
 
             .user-name {
-                margin-left: 12px;
                 padding-bottom: 16px;
+
+                @media(max-width:600px) {
+                    margin-left: 12px;
+                }
             }
         }
 
