--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateCourse.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateCourse.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.University.Resources
-<div class="box-style box-style-form" id="createCourse">
+<div class="box-style box-style-form">
     <form name="createBox" novalidate ng-submit="l.createBox(createBox)">
         <md-content flex>
             <md-input-container flex ng-if="!l.secondStep">
