--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateDepartment.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateDepartment.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.University.Resources
-<div class="box-style box-style-form" id="department">
+<div class="box-style box-style-form">
     <form name="createDepartment" class="create-department" novalidate ng-submit="l.createDepartment(createDepartment)">
         <md-content>
             <md-input-container flex>
