--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutLogin.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutLogin.cshtml
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     @{Html.RenderPartial("_Head");}
-    @Html.Css2("signin")
+    @Html.Css3("~/signin")
 </head>
 <body class="page-md">
     @{ Html.RenderPartial("_Body");}
