--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -271,6 +271,7 @@ body {
 .box-style {
     width: 100%;
     background: @textColorWhite;
+    //background:black;
     box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
     padding: 15px 15px 30px 15px;
     display: block;
