--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.rtl.css
@@ -169,7 +169,7 @@ md-icon.md-default-theme, md-icon {
 md-input-container.md-default-theme .md-input, md-input-container .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    text-shadow:;
+    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme .md-input::-webkit-input-placeholder, md-input-container .md-input::-webkit-input-placeholder, md-input-container.md-default-theme .md-input::-moz-placeholder, md-input-container .md-input::-moz-placeholder, md-input-container.md-default-theme .md-input:-moz-placeholder, md-input-container .md-input:-moz-placeholder, md-input-container.md-default-theme .md-input:-ms-input-placeholder, md-input-container .md-input:-ms-input-placeholder {
@@ -181,7 +181,7 @@ md-input-container.md-default-theme > md-icon, md-input-container > md-icon {
 }
 
 md-input-container.md-default-theme label, md-input-container label, md-input-container.md-default-theme .md-placeholder, md-input-container .md-placeholder {
-    text-shadow:;
+    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -293,9 +293,9 @@ md-radio-group.md-default-theme.md-primary .md-checked:not([disabled]) .md-ink-r
     color: rgba(63,81,181,0.26);
 }
 
-md-radio-group.md-default-theme .md-checked.md-primary .md-ink-ripple, md-radio-group .md-checked.md-primary .md-ink-ripple {
+/*md-radio-group.md-default-theme .md-checked.md-primary .md-ink-ripple, md-radio-group .md-checked.md-primary .md-ink-ripple {
     color: '-0.26';
-}
+}*/
 
 md-radio-group.md-default-theme.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(63,81,181,0.26);
@@ -636,7 +636,7 @@ md-icon.md-default-theme.md-hue-1, md-icon.md-hue-1 {
 md-input-container.md-default-theme.md-hue-1 .md-input, md-input-container.md-hue-1 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    text-shadow:;
+    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-1 .md-input::-webkit-input-placeholder, md-input-container.md-hue-1 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input::-moz-placeholder, md-input-container.md-hue-1 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input:-moz-placeholder, md-input-container.md-hue-1 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-1 .md-input:-ms-input-placeholder, md-input-container.md-hue-1 .md-input:-ms-input-placeholder {
@@ -648,7 +648,7 @@ md-input-container.md-default-theme.md-hue-1 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-1 label, md-input-container.md-hue-1 label, md-input-container.md-default-theme.md-hue-1 .md-placeholder, md-input-container.md-hue-1 .md-placeholder {
-    text-shadow:;
+    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -763,9 +763,9 @@ md-radio-group.md-default-theme.md-hue-1.md-primary .md-checked:not([disabled]) 
     color: rgba(121,134,203,0.26);
 }
 
-md-radio-group.md-default-theme.md-hue-1 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-1 .md-checked.md-primary .md-ink-ripple {
+/*md-radio-group.md-default-theme.md-hue-1 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-1 .md-checked.md-primary .md-ink-ripple {
     color: '-0.26';
-}
+}*/
 
 md-radio-group.md-default-theme.md-hue-1.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-1.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-1.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-1.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(121,134,203,0.26);
@@ -1106,7 +1106,7 @@ md-icon.md-default-theme.md-hue-2, md-icon.md-hue-2 {
 md-input-container.md-default-theme.md-hue-2 .md-input, md-input-container.md-hue-2 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    text-shadow:;
+    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-2 .md-input::-webkit-input-placeholder, md-input-container.md-hue-2 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input::-moz-placeholder, md-input-container.md-hue-2 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input:-moz-placeholder, md-input-container.md-hue-2 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-2 .md-input:-ms-input-placeholder, md-input-container.md-hue-2 .md-input:-ms-input-placeholder {
@@ -1118,7 +1118,7 @@ md-input-container.md-default-theme.md-hue-2 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-2 label, md-input-container.md-hue-2 label, md-input-container.md-default-theme.md-hue-2 .md-placeholder, md-input-container.md-hue-2 .md-placeholder {
-    text-shadow:;
+    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -1233,9 +1233,9 @@ md-radio-group.md-default-theme.md-hue-2.md-primary .md-checked:not([disabled]) 
     color: rgba(40,53,147,0.26);
 }
 
-md-radio-group.md-default-theme.md-hue-2 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-2 .md-checked.md-primary .md-ink-ripple {
+/*md-radio-group.md-default-theme.md-hue-2 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-2 .md-checked.md-primary .md-ink-ripple {
     color: '-0.26';
-}
+}*/
 
 md-radio-group.md-default-theme.md-hue-2.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-2.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-2.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-2.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(40,53,147,0.26);
@@ -1576,7 +1576,7 @@ md-icon.md-default-theme.md-hue-3, md-icon.md-hue-3 {
 md-input-container.md-default-theme.md-hue-3 .md-input, md-input-container.md-hue-3 .md-input {
     color: rgba(0,0,0,0.87);
     border-color: rgba(0,0,0,0.12);
-    text-shadow:;
+    /*text-shadow:;*/
 }
 
     md-input-container.md-default-theme.md-hue-3 .md-input::-webkit-input-placeholder, md-input-container.md-hue-3 .md-input::-webkit-input-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input::-moz-placeholder, md-input-container.md-hue-3 .md-input::-moz-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input:-moz-placeholder, md-input-container.md-hue-3 .md-input:-moz-placeholder, md-input-container.md-default-theme.md-hue-3 .md-input:-ms-input-placeholder, md-input-container.md-hue-3 .md-input:-ms-input-placeholder {
@@ -1588,7 +1588,7 @@ md-input-container.md-default-theme.md-hue-3 > md-icon, md-input-container.md-hu
 }
 
 md-input-container.md-default-theme.md-hue-3 label, md-input-container.md-hue-3 label, md-input-container.md-default-theme.md-hue-3 .md-placeholder, md-input-container.md-hue-3 .md-placeholder {
-    text-shadow:;
+    /*text-shadow:;*/
     color: rgba(0,0,0,0.26);
 }
 
@@ -1703,9 +1703,9 @@ md-radio-group.md-default-theme.md-hue-3.md-primary .md-checked:not([disabled]) 
     color: rgba(140,158,255,0.26);
 }
 
-md-radio-group.md-default-theme.md-hue-3 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-3 .md-checked.md-primary .md-ink-ripple {
+/*md-radio-group.md-default-theme.md-hue-3 .md-checked.md-primary .md-ink-ripple, md-radio-group.md-hue-3 .md-checked.md-primary .md-ink-ripple {
     color: '-0.26';
-}
+}*/
 
 md-radio-group.md-default-theme.md-hue-3.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-hue-3.md-focused:not(:empty).md-primary .md-checked .md-container:before, md-radio-group.md-default-theme.md-hue-3.md-focused:not(:empty) .md-checked.md-primary .md-container:before, md-radio-group.md-hue-3.md-focused:not(:empty) .md-checked.md-primary .md-container:before {
     background-color: rgba(140,158,255,0.26);
