mobile fixes in gamification

--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/infoDialog.cshtml
@@ -18,46 +18,67 @@
             <button type="button">See all levels</button>
         </div>
         <md-progress-linear ng-cloak md-mode="determinate" value="80"></md-progress-linear>
-        <ul class="points-data" layout="row" layout-padding layout-wrap >
+        <ul class="points-data" layout="row" layout-padding layout-wrap>
             <li class="point-data create-quiz" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="p:create-quiz"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="p:create-quiz"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription1</div>
                 <div class="points">50&nbsp;@GamificationResources.Points</div>
             </li>
             <li class="point-data accept-invite" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="t:invite"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="t:invite"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription2</div>
                 <div class="points">150&nbsp;@GamificationResources.Points</div>
             </li>
             <li class="point-data class-invite" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="p:class-invite"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="p:class-invite"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription3</div>
                 <div class="points">50&nbsp;@GamificationResources.Points</div>
             </li>
             <li class="point-data upload-doc" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="p:upload-doc"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="p:upload-doc"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription4</div>
                 <div class="points">100&nbsp;@GamificationResources.Points</div>
+
             </li>
             <li class="point-data comment" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="b:comment"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="b:comment"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription5</div>
                 <div class="points">100&nbsp;@GamificationResources.Points</div>
+
             </li>
             <li class="point-data like" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="b:like"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="b:like"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription6</div>
                 <div class="points">150&nbsp;@GamificationResources.Points</div>
             </li>
             <li class="point-data fb" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="b:facebook-colored"></md-icon>
+                <div class="icon-wrapper">
+                    <md-icon md-svg-icon="b:facebook-transparent"></md-icon>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription7</div>
                 <div class="points">50&nbsp;@GamificationResources.Points</div>
             </li>
             <li class="point-data post" flex-xs="50" flex="25">
-                <md-icon md-svg-icon="u:post"></md-icon>
+                <div class="icon-wrapper">
+                    <div class="icon-bg">
+                        <md-icon md-svg-icon="u:post"></md-icon>
+                    </div>
+                </div>
                 <div class="description">@GamificationResources.PointsDescription8</div>
                 <div class="points">50&nbsp;@GamificationResources.Points</div>
+
             </li>
         </ul>
     </md-dialog-content>
