--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -229,6 +229,10 @@
 
                     .bg {
                         position: absolute;
+
+                        @media(max-width: 600px) {
+                            width: 110px;
+                        }
                     }
 
                     ul {
@@ -242,23 +246,47 @@
                         padding: 25px 50px;
                         border-bottom: 1px solid @backgroundColor;
 
+                        @media(max-width: 600px) {
+                            padding: 10px;
+                            .align-items(flex-start);
+                        }
+
                         .title {
                             text-align: center;
+
+                            @media(max-width: 600px) {
+                                min-width: 100px;
+                            }
                         }
 
                         .name {
                             margin-top: 10px;
+
+                            @media(max-width: 600px) {
+                                font-size: 14px;
+                            }
                         }
 
                         .body {
                             padding-left: 50px;
                             width: 100%;
+
+                            @media(max-width: 600px) {
+                                padding-left: 10px;
+                                font-size: 12px;
+                            }
                         }
                     }
 
                     .image {
                         width: 150px;
                         height: 150px;
+                        margin: 0 auto;
+
+                        @media(max-width: 600px) {
+                            width: 80px;
+                            height: 80px;
+                        }
                     }
 
                     md-progress-linear {
@@ -388,6 +416,14 @@
                         background: black;
                         position: relative;
                         text-align: center;
+                        overflow: hidden;
+                        .displayFlex;
+                        .align-items(center);
+                        .justifyContet(center);
+
+                        @media(max-width: 600px) {
+                            height: 100px;
+                        }
 
                         .bg-r, .bg-l {
                             background-repeat: no-repeat;
@@ -402,6 +438,13 @@
                             height: 160px;
                             bottom: 0;
                             z-index: 0;
+
+                            @media(max-width: 600px) {
+                                width: 240px;
+                                background-position: -50px 10px;
+                                height: inherit;
+                                background-size: cover;
+                            }
                         }
 
                         .bg-r {
@@ -411,24 +454,40 @@
                             height: 160px;
                             right: 0;
                             z-index: 0;
+
+                            @media(max-width: 600px) {
+                                width: 240px;
+                                height: inherit;
+                                background-size: cover;
+                                background-position: 70px 5px;
+                            }
                         }
 
                         .title {
                             margin: 0 auto;
-                            top: 40px;
                             max-width: 100%;
                             position: relative;
+                            margin-top: 2%;
+                            padding: 0 10%;
                         }
                     }
 
                     .content {
-                        padding: 30px;
+                        @media(min-width: 600px) {
+                            padding: 30px;
+                        }
 
                         .user, .filter-wrapper {
                             padding: 15px;
                             width: 100%;
                             max-width: 150px;
                             display: inline-block;
+
+                            @media(max-width: 600px) {
+                                padding: 10px;
+                                width: 100%;
+                                max-width: 142px;
+                            }
                         }
 
                         .filters {
@@ -440,10 +499,17 @@
                                 box-shadow: none;
                             }
 
+                            button, .dates .md-text {
+                                font-size: 18px;
+
+                                @media(max-width: 600px) {
+                                    font-size: 14px;
+                                }
+                            }
+
                             button {
                                 color: @textColorWhite;
                                 line-height: 28px;
-                                font-size: 18px;
                                 width: 100%;
                                 padding: 1px;
                             }
@@ -454,7 +520,6 @@
                                 .md-text {
                                     padding-left: 10px;
                                     color: @textColorWhite;
-                                    font-size: 18px;
                                 }
 
                                 .md-select-icon {
@@ -472,6 +537,7 @@
                         .users {
                             .displayFlex;
                             .align-items(flex-start);
+                            flex-wrap: wrap;
 
                             .user {
                                 .user-data {
@@ -637,15 +703,11 @@
 .info-dialog {
     overflow: visible;
     width: 100%;
-    max-width: ~"calc(100% - 44px)";
-
-    @media(min-width: 960px) {
-        max-width: ~"calc(100% - 360px)";
-        margin-left: 145px;
-    }
+    max-width: 1000px;
+    margin: 0 30px;
 
     @media(max-width: 600px) {
-        max-width: ~"calc(100% - 32px)";
+        margin: 0 10px;
     }
 
     .close {
@@ -662,10 +724,21 @@
         border-radius: 100%;
         z-index: 3;
 
+        @media(max-width: 600px) {
+            right: -8px;
+            top: -8px;
+            padding: 5px;
+        }
+
         md-icon {
             fill: @headerbackground;
             width: 20px;
             height: 20px;
+
+            @media(max-width: 600px) {
+                width: 14px;
+                height: 14px;
+            }
         }
     }
 
@@ -673,18 +746,29 @@
         .displayFlex();
         .align-items(stretch);
         background: @headerbackground;
+        flex-shrink: 0;
 
         .text {
             color: @textColorWhite;
-            max-width: 430px;
             text-align: center;
             font-size: 18px;
             margin: 30px 0;
+
+            @media(max-width: 600px) {
+                font-size: 12px;
+                margin: 0;
+            }
 
             h2 {
                 font-size: 24px;
                 font-weight: bold;
                 margin: 18px 0;
+
+                @media(max-width: 600px) {
+                    font-size: 16px;
+                    font-weight: bold;
+                    margin: 8px 0;
+                }
             }
         }
 
@@ -724,13 +808,21 @@
     md-dialog-content {
         padding: 50px 60px;
 
+        @media(max-width: 600px) {
+            padding: 30px 15px;
+        }
+
         .wrapper {
             .displayFlex();
-            .align-items(center);
+            .align-items(flex-start);
             .justifyContet(space-between);
 
             .text {
                 font-size: 26px;
+
+                @media(max-width: 600px) {
+                    font-size: 16px;
+                }
             }
 
             button {
@@ -739,6 +831,14 @@
                 border-radius: 5px;
                 font-size: 22px;
                 padding: 0 18px;
+                margin-top: 3px;
+
+                @media(max-width: 600px) {
+                    margin-top: 0;
+                    font-size: 14px;
+                    padding: 2px 10px;
+                    flex-shrink: 0;
+                }
             }
         }
 
@@ -755,21 +855,91 @@
                 .md-bar {
                     height: inherit;
                     background: @gamificationYellow;
+
+                    &.md-bar2:after {
+                        content: '';
+                        display: block;
+                        right: -14px;
+                        position: absolute;
+                        width: 20px;
+                        height: 0;
+                        border-top: 22px solid @gamificationYellow;
+                        border-right: 14px solid transparent;
+                    }
                 }
             }
         }
 
         .points-data {
-            margin-top: 20px;
             list-style: none;
+
+            @media(min-width: 600px) {
+                margin-top: 30px;
+            }
 
             .point-data {
                 text-align: center;
+                margin-top: 32px;
+
+                .icon-wrapper {
+                    height: 52px;
+                }
+
+                .points {
+                    font-weight: bold;
+                }
 
                 md-icon, svg {
                     width: 40px;
                     height: 40px;
                     fill: @buttonColorBlue;
+                }
+
+                &.class-invite {
+                    md-icon, svg {
+                        width: 53px;
+                        height: 38px;
+                    }
+                }
+
+                &.upload-doc {
+                    md-icon, svg {
+                        width: 28px;
+                        height: 40px;
+                    }
+                }
+
+                &.comment {
+                    md-icon, svg {
+                        height: 35px;
+                    }
+                }
+
+                &.like {
+                    md-icon, svg {
+                        height: 38px;
+                    }
+                }
+
+                &.post {
+                    .icon-bg {
+                        background: @buttonColorBlue;
+                        border-radius: 100%;
+                        padding: 8px;
+                        display: inline-block;
+                    }
+
+                    md-icon, svg {
+                        height: 24px;
+                        width: 24px;
+                    }
+                }
+
+                &.accept-invite {
+                    md-icon, svg {
+                        width: 44px;
+                        height: 44px;
+                    }
                 }
             }
         }
