--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -38,7 +38,7 @@
 
             <md-tabs class="page-tabs" md-dynamic-height="true">
                 <md-tab md-on-select="u.changeTab(u.state.badges)" md-active="u.tab === u.state.levels || u.tab === u.state.badges || u.tab === u.state.community">
-                    <md-tab-label><h3>@GamificationResources.Badges</h3> <div class="number"></div></md-tab-label>
+                    <md-tab-label><h3>@GamificationResources.Badges</h3> <div class="number">4</div></md-tab-label>
                 </md-tab>
                 <md-tab md-on-select="u.changeTab(u.state.item)" md-active="u.tab === u.state.item">
                     <md-tab-label><h3>@UserResources.Uploads</h3> <div class="number">{{u.details.numItem | megaNumber}}</div></md-tab-label>
@@ -178,6 +178,9 @@
                                 </div>
                             </div>
                             <div ng-if="u.badgeInfo" class="expanded">
+                                <div class="prev">
+                                    <md-icon ng-class="{disabled: !u.badgeInfo.prev}" ng-click="u.showBadge(u.badgeInfo.prev)" md-svg-icon="p:arrow-right"></md-icon>
+                                </div>
                                 <div class="badge-container">
                                     <md-icon md-svg-icon="p:checkmark" ng-if="u.badgeInfo.data.progress === 100"></md-icon>
                                     <div class="image"></div>
@@ -190,8 +193,9 @@
                                         <div class="points">+{{u.badgeInfo.data.points}} pts</div>
                                     </div>
                                 </div>
-                                <div class="next" ng-if="u.badgeInfo.next" ng-click="u.showBadge(u.badgeInfo.next)">></div>
-                                <div class="prev" ng-if="u.badgeInfo.prev" ng-click="u.showBadge(u.badgeInfo.prev)"><</div>
+                                <div class="next">
+                                    <md-icon ng-class="{disabled: !u.badgeInfo.next}" ng-click="u.showBadge(u.badgeInfo.next)" md-svg-icon="p:arrow-right"></md-icon>
+                                </div>
                                 <md-icon class="close" md-svg-icon="t:close" ng-click="u.badgeInfo=false"></md-icon>
                             </div>
                         </div>
@@ -220,8 +224,11 @@
                                 <div class="users">
                                     <div class="user" ng-repeat="user in u.communityUsers | orderBy : '-points'" ng-class="{'top-user' : $index < 5}">
                                         <div class="user-data">
-                                            <img src="{{user.image}}" />
-                                            <div class="name">{{user.name}}</div>
+                                            <div class="img-wrapper">
+                                                <img src="{{user.image}}" />
+                                                <div class="rank">{{$index+1}}</div>
+                                            </div>
+                                            <div class="name ellipsis">{{user.name}}</div>
                                             <div class="points">{{user.points}}</div>
                                         </div>
                                     </div>
